--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -42,7 +42,14 @@ jobs:
 
       - name: Integration Tests
         run: mvn integration-test
-      
+        
+      - name: Login to JFrog
+        uses: docker/login-action@v1
+        with:
+          registry: https://172.16.238.184
+          username: ${{ secrets.JFROG_USER_WRITER }}
+          password: ${{ secrets.JFROG_PASSWORD_WRITER }}
+          
       # Push to artifactory 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
