--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -44,7 +44,7 @@ jobs:
         run: mvn integration-test
         
       - name: Login to JFrog
-        uses: docker/login-action@v2
+        uses: actions/checkout@v3
         with:
           registry: https://172.16.238.184
           username: ${{ secrets.JFROG_USER_WRITER }}
