--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -19,6 +19,10 @@ jobs:
       GROUP: weaveworksdemos
       COMMIT: ${{ github.sha }}
       REPO: shipping
+      DOCKER_REGISTRY: https://172.16.238.184
+      APP_NAME: docker-local/
+      JFROG_USER_WRITER: ${{ secrets.JFROG_USER_WRITER }}
+      JFROG_PASSWORD_WRITER: ${{ secrets.JFROG_PASSWORD_WRITER }}
     steps:
       - uses: actions/checkout@v2
 
@@ -44,15 +48,12 @@ jobs:
         run: mvn integration-test
               
       # Push to artifactory 
-      - name: Push to JCR
-        uses: actions/checkout@v3
-        if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/master'
-        with:
-          registry: https://172.16.238.184
-          username: ${{ secrets.JFROG_USER_WRITER }}
-          password: ${{ secrets.JFROG_PASSWORD_WRITER }}
-          dockerfile: docker/shipping/Dockerfile
-          path: target/
-          repository: ${{ env.GROUP }}/${{ env.REPO }}
-          tag_with_ref: true
-          tag_with_sha: true
+      - uses: actions/checkout@v3
+      - name: Docker Login
+        run: docker login -u "$JFROG_USER_WRITER" -p "$JFROG_PASSWORD" $DOCKER_REGISTRY
+
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag "$DOCKER_REGISTRY/$APP_NAME:1.0.${{ github.run_id }}"
+
+      - name: Push to JFrog
+        run: docker push "$DOCKER_REGISTRY/$APP_NAME:1.0.${{ github.run_id }}"
